# contrapunctus

./: .gitignore  CONVENTIONS.rst  LICENSE  Makefile  README.rst  TODO.rst  Tune.py  circle.py  first.abc  gentune.py  gregorian.py  halftone.py  pyproject.toml  second.abc  setup.py  test.py  testout.abc  tone.py
contrapunctus/: Tune.py  checks.py  circle.py  gentune.py  gregorian.py  rhythm.py  tune.py
test/: .gitignore  Lasso--trans.abc  Lasso.abc  Lasso_sp.abc  bad_w_cf.abc  cf_haenschen.abc  conftest.py  depth_first_with_cantus.data  df-no-name.abc  df.abc  example.abc  ga_invalid_cf.data  gene_roundtrip.data  gentune.data  h2.abc  h2t.abc  invalid-cf.abc  nocf.abc  search_de.data  search_de_cf.data  search_de_cf_haenschen.abc  search_de_cf_haenschen.data  search_de_cf_zacconi.data  search_df_cf_zacconi.data  search_ga.data  search_ga_cf.data  test.py  test_contrapunctus.py  transpose.data  zacconi.abc
